--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </div>
 
             <div class="form">
-                <div class="text">Let's do this!</div>
-                <form action="example.com/path" method="post" id="myform">
+                <div class="encouragement">Let's do this!</div>
+                <form action="https://httpbin.org/" method="post" id="myform">
                     <div class="client_name">
                         <div class="item">
                             <label for="name">NAME</label>
@@ -73,8 +73,8 @@
                 </form>
             </div>
             
-            <button type="submit" form="form" value="Update">Submit</button>
-            <div>Already have an account? <a href="url">Log in</a> </div>
+            <button type="submit" form="myform" value="Update">Submit</button>
+            <div class="login-prompt">Already have an account? <a href="url">Log in</a> </div>
 
         </div>
 
